objects/AHJ_Utility__c.object
<CustomObject>
    <fields>
        <fullName>AC_Disconnect_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AC Disconnect Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AC_Disconnect_Requirement_Notes__c</fullName>
        <label>AC Disconnect Requirement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AHJ_Utility_ID__c</fullName>
        <label>AHJ_Utility ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Utility_Notes__c</fullName>
        <label>Additional Utility Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Layout_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layout Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Diagram_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Line Diagram Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oversizing_Allowance_And_Requirement__c</fullName>
        <label>Oversizing Allowance And Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prod_Meter_Required__c</fullName>
        <label>Prod Meter Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Pre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Meter_Notes__c</fullName>
        <label>Production Meter Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turn_Around_Time__c</fullName>
        <label>Turn Around Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Place_Card_Requirement__c</fullName>
        <label>Utility Place Card Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AHJ Utility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AC_Disconnect_Required__c</columns>
        <columns>AC_Disconnect_Requirement_Notes__c</columns>
        <columns>Additional_Utility_Notes__c</columns>
        <columns>Layout_Required__c</columns>
        <columns>Line_Diagram_Required__c</columns>
        <columns>Oversizing_Allowance_And_Requirement__c</columns>
        <columns>Prod_Meter_Required__c</columns>
        <columns>Production_Meter_Notes__c</columns>
        <columns>Turn_Around_Time__c</columns>
        <columns>Utility_Place_Card_Requirement__c</columns>
        <columns>AHJ_Utility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Utility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AHJ Utility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>